fix spacing issue

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -20,6 +20,6 @@
   .cards__list {
     gap: 0 20px;
     grid-template-columns: repeat(auto-fit, 288px);
-    padding: 0 0 20px;
+    padding: 0;
   }
 }
